<resources>
    <string name="app_name">FitPlay Games</string>
    <string name="app_name_2">FitPlayGames</string>
    <string name="title_section1">Challenges</string>
    <string name="title_section2">Profile</string>
    <string name="title_section3">Friends</string>
    <string name="title_section4">More Options</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_reset_password">Reset Password</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title">FitPlay Games</string>
    <string name="username_hint">Username or Email</string>
    <string name="username_signup_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="sign_in_button_text">Sign In</string>
    <string name="create_new_game_button">CREATE NEW GAME</string>
    <string name="sign_up_text">Don\'t have an account? Sign Up!</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="gender_hint">Gender</string>
    <string name="age_range__hint">Age</string>
    <string name="click_in_image">Click in the image to add a picture</string>
    <string name="login_button_label">SIGN UP</string>
    <string name="signUpText_label">Don\'t have an account? Sign Up!</string>
    <string name="signup_button_label">Sign Up</string>
    <string name="signup_error_message">Please be sure you enter a username, password, email address, age range and gender!!!</string>
    <string name="signup_error_title">Error</string>
    <string name="login_error_message">Please be sure you enter a username, password!!!</string>
    <string name="login_error_title">Error</string>
    <string name="menu_action_logout">Log Out</string>
    <string name="empty_inbox_label">Empty Inbox</string>
    <string name="empty_friends_label">Add friends to begin...</string>
    <string name="menu_action_edit_friend">Edit Friend</string>
    <string name="title_activity_edit_friends">EditFriendsActivity</string>
    <string name="error_title">We\'re sorry</string>
    <string name="menu_action_camera">Camera</string>
    <string name="error_external_storage">There was a problem accessing your device\'s external storage.</string>
    <string name="error_invalid_email">Email not found. Please try again.</string>
    <string name="success_email_sent">An email has been sent to reset your password.</string>
    <string name="email_entry_failed">Invalid Email Address</string>
    <string name="general_error">Error</string>
    <string name="video_file_size_warning">The selected video must be less than 10MB</string>
    <string name="error_file_too_long">The selected file is too large, select a new file!</string>
    <string name="gender_label">Gender:</string>
    <string name="age_range_label">Age Range:</string>
    <string name="challenge_error_message">Please be sure you\'ve selected a challenge name, steps and at least one friend!</string>
    <string name="challenge_error_message_2">You cannot select more than 4 friends to play this challenge!</string>
    <string name="challenge_error_title">Error</string>
    <string name="leader_board_friends">Friends</string>
    <string name="leader_board_global">Global</string>
    <string name="read_privacy_policy">Read and Accept the Privacy Policy.</string>
    <string name="username_required">Please input a Username</string>
    <string name="password_required">Please input a Password</string>
    <string name="email_required">Please input an Email Address</string>
    <string name="gender_required">Please input a Gender</string>
    <string name="age_range_required">Please input an Age Range</string>
    <string name="sign_up_button_error">Please accept the Privacy Policy</string>
    <string name="reset_password">Enter your email address and we\'ll send you a link to reset your password.</string>
    <string name="reset_password_button_label">Send Email</string>
    <string name="friends_icon">Friends</string>
    <string name="global_icon">Global</string>
    <string name="go_home">Go Home</string>
    <string name="fitbit_attention_alert_message">Are you sure you want to cancel this action? FitPlay Games needs authorization from Fitbit for you to keep playing.</string>
    <string name="fitbit_attention_alert">Alert!</string>
    <string-array name="age_range_array">
        <item>Age</item>
        <item>18 or less</item>
        <item>19–29</item>
        <item>30–39</item>
        <item>40–49</item>
        <item>50–59</item>
        <item>59+</item>
    </string-array>
    <string-array name="gender_array">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Choose Picture</item>
    </string-array>
    <string-array name="challenge_steps_array">
        <item>Select steps</item>
        
        <item>1000</item>
        <item>2000</item>
        <item>3000</item>
        <item>4000</item>
        <item>5000</item>
    </string-array>
    <string name="leader_board_text">Leader Board</string>
    <string name="fitbit_sign_in_text">Fitbit Sign In</string>
    <string name="log_out_text">Log Out</string>
    <string name="privacy_policy_text">Privacy Policy</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_privacy_policy">Privacy Policy</string>
    <string name="title_activity_leader_board">Leader Board</string>
    <string name="privacy_text">My name is Dario Gonzalez, I am a graduate student at Brigham Young University and I am conducting this research under the supervision of Professor Derek Hansen, from the School of Technology. You are being invited to participate in this research study of Exergames and Motivation using a Novel Mobile Application. I am interested on finding out about how games that use smartphones and fitness tracking influence physical activity and enjoyment.
    </string>
    <string name="privacy_line_2">Your participation in this study will require to use a new Android application called FitPlay Games, which syncs with your Fitbit data. The app will capture the past 30 days of your Fitbit data (only steps count), in order to compare your past physical activity with the activity when you use the app. All app data including fitness data, app usage, and chat messages will be captured and analyzed by the research team, though it will be aggregated and/or anonymized in any publications. If you consent to joining this research, you will be sent an email asking for your consent. After downloading the app you will be instructed to play two different games over a 4 week period. You can participate as much or as little as you want, but we do not imagine you spending more than an hour a day on the application. The games rely on step-count, and you can invite your friends to play with you. After finishing the 4-week play time, you will be asked to complete a questionnaire that should take approximately 10 minutes. Finally, some participants may be asked to participate in an interview or focus group, which will take no more than an hour and 15 minutes. Such interviews and focus group will be recorded, only for study purposes, and will not published or shared with anybody other than the research team. This study involves minimal risk to you. The benefits, however, may impact society by helping increase knowledge about exercise games that uses fitness tracker data.
   </string>
    <string name="privacy_line_3">You do not have to be in this study if you do not want to be. You do not have to answer any question that you do not want to answer for any reason. You may discontinue using the app at any time. We will be happy to answer any questions you have about this study. If you have further questions about this project or if you have a research-related problem you may contact myself, Dario Gonzalez at <b>fitplaygames@gmail.com</b> or my advisor, Derek Hansen at <b>dlhansen@byu.edu</b>.
   </string>
    <string name="privacy_line_4">If you have any questions about your rights as a research participant you may contact the IRB Administrator at A-285 ASB, Brigham Young University, Provo, UT 84062; <b>irb@byu.edu</b>; (801) 422-1461. The IRB is a group of people who review research studies to protect the rights and welfare of research participants.
   </string>
    <string name="privacy_line_5">Thank you!
   </string>
    <string name="privacy_line_6">The FitPlay Games Team.
   </string>
    <string name="fitbit_api_key">a2f813cf8c7420eff5629382ae6a25a4</string>
    <string name="fitbit_api_secret">0129ef7d53df74e1bb428fdaec8df9c1</string>
    <string name="fitbit_callback">http://localhost</string>
    <string name="challenge_title_playing">Playing</string>
    <string name="challenge_title_pending">Pending</string>
    <string name="challenge_title_finished">Finished</string>
    <string name="title_activity_search_friend">Invite Friends</string>
    <string name="title_activity_challenge__choose">Challenge_Choose</string>
    <string name="title_activity_choose_challenge">Choose Challenge</string>
    <string name="title_activity_hot_potato_challenge">Hot Potato Challenge</string>
    <string name="title_activity_capture_crown_challenge">Capture The Crown Challenge</string>
    <string name="title_activity_main_chat">Chat</string>
    <string name="title_activity_invite_friends">Invite Friends</string>
    <string name="username">Username</string>
    <string name="challenge_title">Challenge Title</string>
    <string name="number_of_players">0</string>
    <string name="steps">steps</string>
    <string name="invite">Invite</string>
    <string name="invite_sent">Invite Sent</string>
    <string name="loading">Loading...</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="start_adding_friends">Start adding friends!</string>
    <string name="you_have_no_chats">You have no messages yet...</string>
    <string name="currently_no_challenges">There are currently no challenges to display!</string>
    <string name="no_results">No results have been found for this search.</string>
    <string name="sent">Sent</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="email">Email</string>
    <string name="action_edit">Edit</string>
    <string name="action_remove">Remove</string>
    <string name="action_skip">Skip</string>
    <string name="action_message">Message</string>
    <string name="close">Close</string>
    <string name="loading_profile">Loading profile, please wait...</string>
    <string name="start_day">Start Day</string>
    <string name="start_time">Start Time</string>
    <string name="step_goal">Step Goal</string>
    <string name="invite_friends">Invite friends to join!</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="create_game">Create Game</string>
    <string name="title_activity_hot_potato_details">Hot Potato</string>
    <string name="title_activity_capture_crown_details">Capture The Crown</string>
    <string name="total_game_steps">Total Game Steps</string>
    <string name="passes">Passes</string>
    <string name="held_crown">Captures</string>
    <string name="title_activity_leadboard">LeadboardActivity</string>
    <string name="title_leaderboard">Leaderboard</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="challenge_name_hint">Name this game...</string>
    <string name="accepted">Accepted</string>
    <string name="average_potato_time">Avg. Potato Time</string>
</resources>