<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="dariogonzalez.fitplaygames.PrivacyPolicyActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView android:text="@string/privacy_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                android:id="@+id/privacyTextView"
                android:layout_marginBottom="10dp"/>

            <TextView android:text="@string/privacy_line_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"/>

            <TextView android:text="@string/privacy_line_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"/>

            <TextView android:text="@string/privacy_line_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"/>

            <TextView android:text="@string/privacy_line_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView android:text="@string/privacy_line_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        </ScrollView>
</LinearLayout>
