<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="dariogonzalez.fitplaygames.LoginActivity">

<!--
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Active &amp; Healthy"
        android:id="@+id/titleTextView"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
        -->

    <TextView
        android:text="@string/title"
        android:id="@+id/title"
        style="@style/AuthTitle"/>

    <TextView
        android:text="@string/subtitle"
        android:id="@+id/subTitle"
        style="@style/AuthSubtitle"/>

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFieldContainer">

        <EditText
            android:id="@+id/userNameField"
            android:hint="@string/username_hint"
            style="@style/EditText"
            android:layout_above="@+id/passwordField">
            <requestFocus/>
        </EditText>

        <EditText
            style="@style/EditText"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordField"
            android:hint="@string/password_hint"
            android:layout_above="@+id/loginButton">
        </EditText>
    </LinearLayout>

    <Button
        android:text="@string/sign_in_button_text"
        android:id="@+id/loginButton"
        style="@style/AuthButton"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editTextLayout"
        android:onClick="onClick"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_text"
        android:id="@+id/signUpText"
        android:layout_below="@id/loginButton"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold"/>
</RelativeLayout>
