<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_background_color"
    tools:context="dariogonzalez.fitplaygames.SignUpActivity"
    android:orientation="vertical">


    <LinearLayout
        android:background="@color/login_background_color"
        android:id="@+id/editTextLayout"
        android:orientation="vertical"
        style="@style/AuthFieldContainer">

        <EditText
            style="@style/EditText"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailField"
            android:hint="@string/email_hint">
            <requestFocus/>
        </EditText>
        <EditText
            style="@style/EditText"
            android:id="@+id/userNameField"
            android:hint="@string/username_signup_hint">

        </EditText>

        <EditText
            style="@style/EditText"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordField"
            android:hint="@string/password_hint"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/spinnersImageLayout"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_weight="1">

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gender"
                android:hint="@string/gender_hint"
                />
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/age_range"
                android:hint="@string/age_range__hint" />

        </LinearLayout>


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/userPhoto"
                android:layout_weight="1"
                android:background="@drawable/ic_account_circle_white_24px" />

        </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/spinnersImageLayout"
        android:layout_marginTop="10px">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBoxOutline"
            android:background="@drawable/ic_check_box_outline_blank_grey_24px"
            android:minWidth="20dp"
            android:maxWidth="20dp"
            android:minHeight="20dp"
            android:maxHeight="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/read_privacy_policy"
            android:id="@+id/image_label"
            android:layout_marginLeft="10dp"/>
        </LinearLayout>

        <Button
            android:id="@+id/signUpButton"
            style="@style/AuthButton"
            android:text="@string/sign_up_button_label"
            android:textColor="@color/white"
            android:layout_alignParentLeft="true"
            android:background="@color/primary"
            android:layout_marginTop="15dp"/>
        </LinearLayout>

</LinearLayout>
