<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_background_color"
    tools:context="dariogonzalez.fitplaygames.ForgotPasswordActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/AuthFieldContainer">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resetPasswordTV"
            android:text="@string/reset_password"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/resetPasswrodET"
            android:hint="@string/email_hint"
            android:layout_marginTop="15dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/resetPasswordBtn"
            android:onClick="onClick"
            android:text="@string/reset_password_button_label"
            android:textColor="@color/white"
            android:background="@color/primary"
            android:layout_marginTop="15dp"/>

    </LinearLayout>
</LinearLayout>