<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:orientation="horizontal">

    <dariogonzalez.fitplaygames.utils.RoundedImageView
        android:id="@+id/user_thumbnail"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_user"
        android:layout_centerVertical="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="64dp"
        android:paddingStart="64dp"
        android:layout_centerVertical="true">

        <TextView
            android:text="@string/username"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/secondary_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_name"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/tv_steps"
                android:textColor="@color/secondary_text"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="15,000"
                android:gravity="center_vertical"
                android:paddingRight="5dp"/>

            <TextView
                android:text="@string/steps"
                android:textColor="@color/secondary_text"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"/>


        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_invite"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/invite"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:visibility="gone"
        android:background="@color/primary"
        android:textColor="@color/white"/>

    <LinearLayout
        android:id="@+id/friend_request_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btn_decline"
                android:layout_width="70dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/ic_decline_circle"
                android:background="@android:color/transparent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decline"
                android:layout_gravity="center"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/btn_accept"
            android:layout_width="60dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_accept_circle"
            android:layout_weight="1"
            android:background="@android:color/transparent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            android:layout_gravity="center"/>

    </LinearLayout>



    </LinearLayout>


</RelativeLayout>
