<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="horizontal">

    <dariogonzalez.fitplaygames.utils.RoundedImageView
        android:id="@+id/user_thumbnail"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_account_circle"
        android:layout_centerVertical="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="52dp"
        android:paddingStart="52dp"
        android:layout_centerVertical="true">

        <TextView
            android:text="@string/username"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/dark_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_name"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/tv_passes"
                android:textColor="@color/secondary_text"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/accepted"/>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/finishedLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:visibility="gone">

        <TextView
            android:id="@+id/potato_time_value"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingTop="3dp"
            android:textColor="@color/accent"
            android:layout_weight="1" />


        <TextView
            android:id="@+id/avg_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/average_potato_time"
            android:layout_gravity="end"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="15sp"
            android:textColor="@color/secondary_text"/>
    </LinearLayout>



    <LinearLayout
        android:id="@+id/progressLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:visibility="gone">

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/progressBar"
            android:layout_gravity="right"
            android:progress="60"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/steps_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/secondary_text"
            android:layout_gravity="center_horizontal"
            android:text="1500 steps"
            android:textSize="14sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/game_response"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btn_decline"
                android:layout_width="70dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/ic_decline_circle"
                android:background="@android:color/transparent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decline"
                android:textSize="12sp"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btn_accept"
                android:layout_width="60dp"
                android:layout_height="0dp"
                android:src="@drawable/ic_accept_circle"
                android:layout_weight="1"
                android:background="@android:color/transparent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accept"
                android:textSize="12sp"
                android:layout_gravity="center"/>

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>
